Various Classification Methods

--- a/Classification.ipynb
+++ b/Classification.ipynb
@@ -902,7 +902,7 @@
     "\n",
     "# Create the parameter grid based on the results of random search \n",
     "param_grid = {\n",
-    "    'bootstrap': [True],\n",
+    "    'bootstrap': [True,False],\n",
     "    'max_depth': [10,3,5],\n",
     "    'max_features': [2, 3],\n",
     "    'min_samples_split': [2,8],\n",
@@ -998,36 +998,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 165,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\DHARMIK\\Anaconda3\\lib\\site-packages\\sklearn\\ensemble\\forest.py:246: FutureWarning: The default value of n_estimators will change from 10 in version 0.20 to 100 in 0.22.\n",
-      "  \"10 in version 0.20 to 100 in 0.22.\", FutureWarning)\n",
       "[Parallel(n_jobs=-1)]: Using backend ThreadingBackend with 8 concurrent workers.\n",
-      "[Parallel(n_jobs=-1)]: Done   6 out of  10 | elapsed:    0.0s remaining:    0.0s\n",
-      "[Parallel(n_jobs=-1)]: Done  10 out of  10 | elapsed:    0.0s finished\n",
+      "[Parallel(n_jobs=-1)]: Done  34 tasks      | elapsed:    0.3s\n",
+      "[Parallel(n_jobs=-1)]: Done 184 tasks      | elapsed:    1.8s\n",
+      "[Parallel(n_jobs=-1)]: Done 200 out of 200 | elapsed:    1.9s finished\n",
       "[Parallel(n_jobs=8)]: Using backend ThreadingBackend with 8 concurrent workers.\n",
-      "[Parallel(n_jobs=8)]: Done   6 out of  10 | elapsed:    0.0s remaining:    0.0s\n",
-      "[Parallel(n_jobs=8)]: Done  10 out of  10 | elapsed:    0.0s finished\n"
+      "[Parallel(n_jobs=8)]: Done  34 tasks      | elapsed:    0.0s\n",
+      "[Parallel(n_jobs=8)]: Done 184 tasks      | elapsed:    0.1s\n",
+      "[Parallel(n_jobs=8)]: Done 200 out of 200 | elapsed:    0.1s finished\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "0.8647038205397827"
+       "0.8671573781983877"
       ]
      },
-     "execution_count": 163,
+     "execution_count": 165,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "rf=RandomForestClassifier(n_jobs=-1,max_depth=10,verbose=1,min_samples_split=2,max_features=3,bootstrap=True)\n",
+    "rf=RandomForestClassifier(n_jobs=-1,n_estimators=200,max_depth=10,verbose=1,min_samples_split=2,max_features=3,bootstrap=True)\n",
     "rf.fit(x_train,y_train)\n",
     "rf.score(x_test,y_test)"
    ]
